@@ -1,4 +1,8 @@
 2009-09-07  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-06-01
+        * Missed an update needed for global overview with new tool.
+
+2009-09-07  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-06-00
         * Replace JEPTransPerfMon with JEPSimBSMon tool.
           Allows for more effective debugging of JEP system.
